--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,17 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
+
+    dataBinding {
+        enabled = true
+    }
+
+    
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
+        manifestPlaceholders = [file_provider: "com.qucoon.myhmo"]
+
         applicationId "com.qucoon.myhmo"
         minSdkVersion 23
         targetSdkVersion 29
@@ -72,11 +80,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
-
     /*Retrofit lib*/
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+
     /*RxJava lib*/
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
@@ -148,5 +156,12 @@ dependencies {
     implementation 'com.github.RobertApikyan:SegmentedControl:1.2.0'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+  //  implementation 'com.cometchat:pro-android-chat-sdk:2.1.5'
+
+    implementation 'com.github.dhaval2404:imagepicker:1.7.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
