--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,17 @@
         <meta-data
                 android:name="com.google.firebase.messaging.default_notification_color"
                 android:resource="@color/colorPrimary"/>
+
+<!--        <provider-->
+<!--                android:name="androidx.core.content.FileProvider"-->
+<!--                android:authorities="com.example.demoapp.provider"-->
+<!--                android:exported="false"-->
+<!--                android:grantUriPermissions="true">-->
+<!--            <meta-data-->
+<!--                    android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--                    android:resource="@xml/freshchat_file_provider_paths" />-->
+<!--        </provider>-->
+
     </application>
 
 </manifest>
