--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,20 +12,24 @@ android {
         enabled = true
     }
 
+    buildFeatures{
+        viewBinding = true
+    }
+
     
-    compileSdkVersion 29
+    compileSdkVersion 33
     buildToolsVersion "29.0.3"
     defaultConfig {
         manifestPlaceholders = [file_provider: "com.qucoon.myhmo"]
-
         applicationId "com.qucoon.myhmo"
-        minSdkVersion 23
-        targetSdkVersion 29
+        minSdkVersion 19
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         multiDexEnabled = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -33,12 +37,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = JavaVersion.VERSION_11.toString()
     }
 }
 
@@ -71,19 +75,19 @@ dependencies {
     //Utils
     implementation 'com.github.gurleensethi:LiteUtilities:v1.3.0'
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     //Firebase
-    implementation 'com.google.firebase:firebase-core:17.0.1'
-    implementation 'com.google.firebase:firebase-analytics:17.4.1'
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.1.7'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.2'
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
 
     /*Retrofit lib*/
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     /*RxJava lib*/
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -139,7 +143,7 @@ dependencies {
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
 
-    implementation 'com.github.pzienowicz:androidx-auto-scroll-view-pager:1.1.0'
+  //  implementation 'com.github.pzienowicz:androidx-auto-scroll-view-pager:1.1.0'
 
     implementation 'com.pnikosis:materialish-progress:1.7'
 
@@ -149,7 +153,7 @@ dependencies {
     implementation 'com.agrawalsuneet.androidlibs:loaderspack:1.2.3'
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    implementation 'com.github.freshdesk:freshchat-android:3.6.5'
+   // implementation 'com.github.freshdesk:freshchat-android:3.6.5'
 
     implementation 'com.github.dueeeke:dk-tablayout:1.0.2'
 
@@ -158,10 +162,12 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
   //  implementation 'com.cometchat:pro-android-chat-sdk:2.1.5'
-
-    implementation 'com.github.dhaval2404:imagepicker:1.7.1'
+  //  implementation 'com.github.dhaval2404:imagepicker:1.7.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.zoho.salesiq:mobilisten:4.2.1'
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+
 
 }
