--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.5.31'
     repositories {
         google()
         jcenter()
@@ -9,17 +9,17 @@ buildscript {
         maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
         maven { url "https://dl.bintray.com/soywiz/soywiz" }
-        maven { url "http://dl.bintray.com/jlmd/maven"}
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url 'https://plugins.gradle.org/m2/'}
         maven { url 'https://maven.fabric.io/public' }
-        
+        maven { url 'https://maven.zohodl.com'}
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.8'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
     }
 }
 
@@ -31,12 +31,13 @@ allprojects {
         maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
         maven { url "https://dl.bintray.com/soywiz/soywiz" }
-        maven { url "http://dl.bintray.com/jlmd/maven"}
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url 'https://plugins.gradle.org/m2/'}
         maven { url 'https://maven.fabric.io/public' }
         maven {url "https://dl.bintray.com/cometchat/pro"}
-        
+        maven { url 'https://maven.zohodl.com'}
+
+
     }
 }
 
